Mon Feb 09 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  default values for STACK_WIPE_SITES if x86_64
                      cast builtin_alloca result to (VALUE *)
        
        * gc.c:  don't use builtin-frame-address at all
        
        * version.h:  bumped date

Sun Feb 08 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  changed default values for STACK_WIPE_SITES
        
        * gc.c:  don't trust config's USE_BUILTIN_FRAME_ADDRESS
        
        * version.h:  bumped date


Thu Jan 23 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  remapped wipe methods to avoid values > 9
                      added cases for __ppc64__ and __x86_64__
        
        * missing/alloca.c:  made 64-bit clean
        
        * version.h:  bumped date
        
        
Sun Jan 18 20:15:36 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  added support for STACK_WIPE_METHOD==5 (x86 asm)

        * gc.c:       allow another STACK_WIPE_METHOD

        * version.h:  bumped date


Sat Jan 17 20:15:36 2009  Brent Roman  <brent@mbari.org>

        * gc.c:     use separate gc stack so it never need be wiped

        * version.h:  bumped date


Fri Jan 16 20:15:36 2009  Brent Roman  <brent@mbari.org>

        * gc.c:     added GC_STACK_PAD, renamed stack_gc_limit->gc_stack_limit
                    optionally wipe the entire GC stack after each gc pass
        
        * rubysig.h:  default STACK_WIPE_SITES changed to 0x4770
        
        * version.h:  bumped date


Wed Jan 14 20:15:36 2009  Brent Roman  <brent@mbari.org>

        * eval.c:     declare wipe_after with gnu always_inline attribute
        
        * rubysig.h:  use alloca(0) to get sp for all CPU except PowerPC
                      (less likely to trash stack when clearing it)
        
        * version.h:  bumped date


Sun Jan 13 20:15:36 2009  Brent Roman  <brent@mbari.org>
